added expand/collapse animation

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<!-- an item represents one project. this is the only element with an id as it is required for scrolling -->
 			<div class="galleroid-item active" id="galleroid-item_1">
 				<!-- the preview section is what is shown in the 'polaroid' style previews and is clicked on to expand/collapse the detail section -->
-				<a href="#galleroid-item_1" class="galleroid-preview">
+				<a href="#galleroid-item_1" class="galleroid-preview active">
 					<div class="galleroid-picture-container active">
 						<!-- only one of these images will be shown at one time -->
 						<!--
@@ -28,7 +28,7 @@
 					</div>
 					<!-- this title is always visible underneath the picture -->
 					<p class="galleroid-title active">
-						Title of gallery item
+						Title
 					</p>
 				</a>
 				<!-- detail includes all items hidden by default -->
@@ -42,10 +42,11 @@
 					<div class="galleroid-text-container">
 						<!-- only one of these paragraphs will be shown at one time alongside its accompanying picture -->
 						<!-- pictures and text must match up in number and order -->
-						<!--
+						
 							<p class="galleroid-text active">
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 							</p>
+						<!--
 							<p class="galleroid-text">
 								Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 							</p>
@@ -73,7 +74,7 @@
 						</div>
 						<!-- this title is always visible underneath the picture -->
 						<p class="galleroid-title">
-							Title of gallery item
+							Title
 						</p>
 					</a>
 					<!-- detail includes all items hidden by default -->
@@ -87,10 +88,11 @@
 						<div class="galleroid-text-container">
 							<!-- only one of these paragraphs will be shown at one time alongside its accompanying picture -->
 							<!-- pictures and text must match up in number and order -->
-							<!--
+							
 								<p class="galleroid-text active">
 									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 								</p>
+							<!--
 								<p class="galleroid-text">
 									Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 								</p>
