--- a/index.html
+++ b/index.html
@@ -15,187 +15,72 @@
 		<div id="galleroid">
 			<!-- an item represents one project. this is the only element with an id as it is required for scrolling -->
 			<div class="galleroid-item active" id="galleroid-item_1">
-				<!-- the preview section is what is shown in the 'polaroid' style previews and is clicked on to expand/collapse the detail section -->
-				<a href="#galleroid-item_1" class="galleroid-preview active">
-					<div class="galleroid-picture-container active">
-						<!-- only one of these images will be shown at one time -->
-						<!--
-							<img src="images/galleroid/1/1.jpg" class="galleroid-picture active" width="100" height="100">
-							<img src="images/galleroid/1/2.jpg" class="galleroid-picture" width="100" height="100">
-							<img src="images/galleroid/1/3.jpg" class="galleroid-picture" width="100" height="100">
-							<img src="images/galleroid/1/4.jpg" class="galleroid-picture" width="100" height="100">
-						-->
-					</div>
-					<!-- this title is always visible underneath the picture -->
-					<p class="galleroid-title active">
-						Title
-					</p>
-				</a>
-				<!-- detail includes all items hidden by default -->
-				<div class="galleroid-detail active">
-					<!-- buttons to scroll through pictures/text -->
-					<div class="galleroid-buttons">
-						<button><</button>
-						<button>></button>
-					</div>
-
-					<div class="galleroid-text-container">
-						<!-- only one of these paragraphs will be shown at one time alongside its accompanying picture -->
-						<!-- pictures and text must match up in number and order -->
-
-						<p class="galleroid-text active">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-						</p>
-						<!--
-							<p class="galleroid-text">
-								Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-							</p>
-							<p class="galleroid-text">
-								Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-							</p>
-							<p class="galleroid-text">
-								Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-							</p>
+				<div class="galleroid-picture-container active" href="#galleroid-item_1">
+					<!-- only one of these images will be shown at one time -->
+					<!--
+						<img src="images/galleroid/1/1.jpg" class="galleroid-picture active" width="100" height="100">
+						<img src="images/galleroid/1/2.jpg" class="galleroid-picture" width="100" height="100">
+						<img src="images/galleroid/1/3.jpg" class="galleroid-picture" width="100" height="100">
+						<img src="images/galleroid/1/4.jpg" class="galleroid-picture" width="100" height="100">
 					-->
-					</div>
+				</div>
+				<button class="galleroid-previous-button active"><</button>
+				<p class="galleroid-title active">
+					Title
+				</p>
+				<button class="galleroid-next-button active">></button>
+				<div class="galleroid-text-container active">
+					<!-- only one of these paragraphs will be shown at one time alongside its accompanying picture -->
+					<!-- pictures and text must match up in number and order -->
+					<p class="galleroid-text active">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+					</p>
+					<!--
+						<p class="galleroid-text">
+							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+						</p>
+						<p class="galleroid-text">
+							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+						</p>
+						<p class="galleroid-text">
+							Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						</p>
+				-->
 				</div>
 			</div>
-			<div class="galleroid-item " id="galleroid-item_2">
+			<div class="galleroid-item" id="galleroid-item_2">
 				<!-- the preview section is what is shown in the 'polaroid' style previews and is clicked on to expand/collapse the detail section -->
-				<a href="#galleroid-item_2" class="galleroid-preview ">
-					<div class="galleroid-picture-container ">
-						<!-- only one of these images will be shown at one time -->
-						<!--
-							<img src="images/galleroid/1/1.jpg" class="galleroid-picture active" width="100" height="100">
-							<img src="images/galleroid/1/2.jpg" class="galleroid-picture" width="100" height="100">
-							<img src="images/galleroid/1/3.jpg" class="galleroid-picture" width="100" height="100">
-							<img src="images/galleroid/1/4.jpg" class="galleroid-picture" width="100" height="100">
-						-->
-					</div>
-					<!-- this title is always visible underneath the picture -->
-					<p class="galleroid-title ">
-						Title
-					</p>
-				</a>
-				<!-- detail includes all items hidden by default -->
-				<div class="galleroid-detail ">
-					<!-- buttons to scroll through pictures/text -->
-					<div class="galleroid-buttons">
-						<button><</button>
-						<button>></button>
-					</div>
-
-					<div class="galleroid-text-container">
-						<!-- only one of these paragraphs will be shown at one time alongside its accompanying picture -->
-						<!-- pictures and text must match up in number and order -->
-
-						<p class="galleroid-text active">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-						</p>
-						<!--
-							<p class="galleroid-text">
-								Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-							</p>
-							<p class="galleroid-text">
-								Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-							</p>
-							<p class="galleroid-text">
-								Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-							</p>
+				<div href="#galleroid-item_2" class="galleroid-picture-container">
+					<!-- only one of these images will be shown at one time -->
+					<!--
+						<img src="images/galleroid/1/1.jpg" class="galleroid-picture active" width="100" height="100">
+						<img src="images/galleroid/1/2.jpg" class="galleroid-picture" width="100" height="100">
+						<img src="images/galleroid/1/3.jpg" class="galleroid-picture" width="100" height="100">
+						<img src="images/galleroid/1/4.jpg" class="galleroid-picture" width="100" height="100">
 					-->
-					</div>
 				</div>
-			</div>
-			<div class="galleroid-item " id="galleroid-item_3">
-				<!-- the preview section is what is shown in the 'polaroid' style previews and is clicked on to expand/collapse the detail section -->
-				<a href="#galleroid-item_3" class="galleroid-preview ">
-					<div class="galleroid-picture-container ">
-						<!-- only one of these images will be shown at one time -->
-						<!--
-							<img src="images/galleroid/1/1.jpg" class="galleroid-picture active" width="100" height="100">
-							<img src="images/galleroid/1/2.jpg" class="galleroid-picture" width="100" height="100">
-							<img src="images/galleroid/1/3.jpg" class="galleroid-picture" width="100" height="100">
-							<img src="images/galleroid/1/4.jpg" class="galleroid-picture" width="100" height="100">
-						-->
-					</div>
-					<!-- this title is always visible underneath the picture -->
-					<p class="galleroid-title ">
-						Title
+				<button class="galleroid-previous-button"><</button>
+				<p class="galleroid-title">
+					Title bigger title title test
+				</p>
+				<button class="galleroid-next-button">></button>
+				<div class="galleroid-text-container">
+					<!-- only one of these paragraphs will be shown at one time alongside its accompanying picture -->
+					<!-- pictures and text must match up in number and order -->
+					<p class="galleroid-text active">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 					</p>
-				</a>
-				<!-- detail includes all items hidden by default -->
-				<div class="galleroid-detail ">
-					<!-- buttons to scroll through pictures/text -->
-					<div class="galleroid-buttons">
-						<button><</button>
-						<button>></button>
-					</div>
-
-					<div class="galleroid-text-container">
-						<!-- only one of these paragraphs will be shown at one time alongside its accompanying picture -->
-						<!-- pictures and text must match up in number and order -->
-
-						<p class="galleroid-text active">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+					<!--
+						<p class="galleroid-text">
+							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 						</p>
-						<!--
-							<p class="galleroid-text">
-								Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-							</p>
-							<p class="galleroid-text">
-								Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-							</p>
-							<p class="galleroid-text">
-								Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-							</p>
-					-->
-					</div>
-				</div>
-			</div>
-			<div class="galleroid-item " id="galleroid-item_4">
-				<!-- the preview section is what is shown in the 'polaroid' style previews and is clicked on to expand/collapse the detail section -->
-				<a href="#galleroid-item_4" class="galleroid-preview ">
-					<div class="galleroid-picture-container ">
-						<!-- only one of these images will be shown at one time -->
-						<!--
-							<img src="images/galleroid/1/1.jpg" class="galleroid-picture active" width="100" height="100">
-							<img src="images/galleroid/1/2.jpg" class="galleroid-picture" width="100" height="100">
-							<img src="images/galleroid/1/3.jpg" class="galleroid-picture" width="100" height="100">
-							<img src="images/galleroid/1/4.jpg" class="galleroid-picture" width="100" height="100">
-						-->
-					</div>
-					<!-- this title is always visible underneath the picture -->
-					<p class="galleroid-title ">
-						Title
-					</p>
-				</a>
-				<!-- detail includes all items hidden by default -->
-				<div class="galleroid-detail ">
-					<!-- buttons to scroll through pictures/text -->
-					<div class="galleroid-buttons">
-						<button><</button>
-						<button>></button>
-					</div>
-
-					<div class="galleroid-text-container">
-						<!-- only one of these paragraphs will be shown at one time alongside its accompanying picture -->
-						<!-- pictures and text must match up in number and order -->
-
-						<p class="galleroid-text active">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+						<p class="galleroid-text">
+							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 						</p>
-						<!--
-							<p class="galleroid-text">
-								Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-							</p>
-							<p class="galleroid-text">
-								Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-							</p>
-							<p class="galleroid-text">
-								Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-							</p>
+						<p class="galleroid-text">
+							Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						</p> 
 					-->
-					</div>
 				</div>
 			</div>
 		</div>
