--- a/index.html
+++ b/index.html
@@ -83,6 +83,251 @@
 					-->
 				</div>
 			</div>
+			<div class="galleroid-item" id="galleroid-item_3">
+				<!-- the preview section is what is shown in the 'polaroid' style previews and is clicked on to expand/collapse the detail section -->
+				<div href="#galleroid-item_3" class="galleroid-picture-container">
+					<!-- only one of these images will be shown at one time -->
+					<!--
+						<img src="images/galleroid/1/1.jpg" class="galleroid-picture active" width="100" height="100">
+						<img src="images/galleroid/1/2.jpg" class="galleroid-picture" width="100" height="100">
+						<img src="images/galleroid/1/3.jpg" class="galleroid-picture" width="100" height="100">
+						<img src="images/galleroid/1/4.jpg" class="galleroid-picture" width="100" height="100">
+					-->
+				</div>
+				<button class="galleroid-previous-button"><</button>
+				<p class="galleroid-title">
+					Title bigger title title test
+				</p>
+				<button class="galleroid-next-button">></button>
+				<div class="galleroid-text-container">
+					<!-- only one of these paragraphs will be shown at one time alongside its accompanying picture -->
+					<!-- pictures and text must match up in number and order -->
+					<p class="galleroid-text active">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+					</p>
+					<!--
+						<p class="galleroid-text">
+							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+						</p>
+						<p class="galleroid-text">
+							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+						</p>
+						<p class="galleroid-text">
+							Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						</p> 
+					-->
+				</div>
+			</div>
+			<div class="galleroid-item" id="galleroid-item_4">
+				<!-- the preview section is what is shown in the 'polaroid' style previews and is clicked on to expand/collapse the detail section -->
+				<div href="#galleroid-item_4" class="galleroid-picture-container">
+					<!-- only one of these images will be shown at one time -->
+					<!--
+						<img src="images/galleroid/1/1.jpg" class="galleroid-picture active" width="100" height="100">
+						<img src="images/galleroid/1/2.jpg" class="galleroid-picture" width="100" height="100">
+						<img src="images/galleroid/1/3.jpg" class="galleroid-picture" width="100" height="100">
+						<img src="images/galleroid/1/4.jpg" class="galleroid-picture" width="100" height="100">
+					-->
+				</div>
+				<button class="galleroid-previous-button"><</button>
+				<p class="galleroid-title">
+					Title bigger title title test
+				</p>
+				<button class="galleroid-next-button">></button>
+				<div class="galleroid-text-container">
+					<!-- only one of these paragraphs will be shown at one time alongside its accompanying picture -->
+					<!-- pictures and text must match up in number and order -->
+					<p class="galleroid-text active">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+					</p>
+					<!--
+						<p class="galleroid-text">
+							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+						</p>
+						<p class="galleroid-text">
+							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+						</p>
+						<p class="galleroid-text">
+							Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						</p> 
+					-->
+				</div>
+			</div>
+			<div class="galleroid-item" id="galleroid-item_5">
+				<!-- the preview section is what is shown in the 'polaroid' style previews and is clicked on to expand/collapse the detail section -->
+				<div href="#galleroid-item_5" class="galleroid-picture-container">
+					<!-- only one of these images will be shown at one time -->
+					<!--
+						<img src="images/galleroid/1/1.jpg" class="galleroid-picture active" width="100" height="100">
+						<img src="images/galleroid/1/2.jpg" class="galleroid-picture" width="100" height="100">
+						<img src="images/galleroid/1/3.jpg" class="galleroid-picture" width="100" height="100">
+						<img src="images/galleroid/1/4.jpg" class="galleroid-picture" width="100" height="100">
+					-->
+				</div>
+				<button class="galleroid-previous-button"><</button>
+				<p class="galleroid-title">
+					Title bigger title title test
+				</p>
+				<button class="galleroid-next-button">></button>
+				<div class="galleroid-text-container">
+					<!-- only one of these paragraphs will be shown at one time alongside its accompanying picture -->
+					<!-- pictures and text must match up in number and order -->
+					<p class="galleroid-text active">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+					</p>
+					<!--
+						<p class="galleroid-text">
+							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+						</p>
+						<p class="galleroid-text">
+							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+						</p>
+						<p class="galleroid-text">
+							Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						</p> 
+					-->
+				</div>
+			</div>
+			<div class="galleroid-item" id="galleroid-item_6">
+				<!-- the preview section is what is shown in the 'polaroid' style previews and is clicked on to expand/collapse the detail section -->
+				<div href="#galleroid-item_6" class="galleroid-picture-container">
+					<!-- only one of these images will be shown at one time -->
+					<!--
+						<img src="images/galleroid/1/1.jpg" class="galleroid-picture active" width="100" height="100">
+						<img src="images/galleroid/1/2.jpg" class="galleroid-picture" width="100" height="100">
+						<img src="images/galleroid/1/3.jpg" class="galleroid-picture" width="100" height="100">
+						<img src="images/galleroid/1/4.jpg" class="galleroid-picture" width="100" height="100">
+					-->
+				</div>
+				<button class="galleroid-previous-button"><</button>
+				<p class="galleroid-title">
+					Title bigger title title test
+				</p>
+				<button class="galleroid-next-button">></button>
+				<div class="galleroid-text-container">
+					<!-- only one of these paragraphs will be shown at one time alongside its accompanying picture -->
+					<!-- pictures and text must match up in number and order -->
+					<p class="galleroid-text active">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+					</p>
+					<!--
+						<p class="galleroid-text">
+							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+						</p>
+						<p class="galleroid-text">
+							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+						</p>
+						<p class="galleroid-text">
+							Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						</p> 
+					-->
+				</div>
+			</div>
+			<div class="galleroid-item" id="galleroid-item_7">
+				<!-- the preview section is what is shown in the 'polaroid' style previews and is clicked on to expand/collapse the detail section -->
+				<div href="#galleroid-item_7" class="galleroid-picture-container">
+					<!-- only one of these images will be shown at one time -->
+					<!--
+						<img src="images/galleroid/1/1.jpg" class="galleroid-picture active" width="100" height="100">
+						<img src="images/galleroid/1/2.jpg" class="galleroid-picture" width="100" height="100">
+						<img src="images/galleroid/1/3.jpg" class="galleroid-picture" width="100" height="100">
+						<img src="images/galleroid/1/4.jpg" class="galleroid-picture" width="100" height="100">
+					-->
+				</div>
+				<button class="galleroid-previous-button"><</button>
+				<p class="galleroid-title">
+					Title bigger title title test
+				</p>
+				<button class="galleroid-next-button">></button>
+				<div class="galleroid-text-container">
+					<!-- only one of these paragraphs will be shown at one time alongside its accompanying picture -->
+					<!-- pictures and text must match up in number and order -->
+					<p class="galleroid-text active">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+					</p>
+					<!--
+						<p class="galleroid-text">
+							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+						</p>
+						<p class="galleroid-text">
+							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+						</p>
+						<p class="galleroid-text">
+							Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						</p> 
+					-->
+				</div>
+			</div>
+			<div class="galleroid-item" id="galleroid-item_8">
+				<!-- the preview section is what is shown in the 'polaroid' style previews and is clicked on to expand/collapse the detail section -->
+				<div href="#galleroid-item_8" class="galleroid-picture-container">
+					<!-- only one of these images will be shown at one time -->
+					<!--
+						<img src="images/galleroid/1/1.jpg" class="galleroid-picture active" width="100" height="100">
+						<img src="images/galleroid/1/2.jpg" class="galleroid-picture" width="100" height="100">
+						<img src="images/galleroid/1/3.jpg" class="galleroid-picture" width="100" height="100">
+						<img src="images/galleroid/1/4.jpg" class="galleroid-picture" width="100" height="100">
+					-->
+				</div>
+				<button class="galleroid-previous-button"><</button>
+				<p class="galleroid-title">
+					Title bigger title title test
+				</p>
+				<button class="galleroid-next-button">></button>
+				<div class="galleroid-text-container">
+					<!-- only one of these paragraphs will be shown at one time alongside its accompanying picture -->
+					<!-- pictures and text must match up in number and order -->
+					<p class="galleroid-text active">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+					</p>
+					<!--
+						<p class="galleroid-text">
+							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+						</p>
+						<p class="galleroid-text">
+							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+						</p>
+						<p class="galleroid-text">
+							Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						</p> 
+					-->
+				</div>
+			</div>
+			<div class="galleroid-item" id="galleroid-item_9">
+				<!-- the preview section is what is shown in the 'polaroid' style previews and is clicked on to expand/collapse the detail section -->
+				<div href="#galleroid-item_9" class="galleroid-picture-container">
+					<!-- only one of these images will be shown at one time -->
+					<!--
+						<img src="images/galleroid/1/1.jpg" class="galleroid-picture active" width="100" height="100">
+						<img src="images/galleroid/1/2.jpg" class="galleroid-picture" width="100" height="100">
+						<img src="images/galleroid/1/3.jpg" class="galleroid-picture" width="100" height="100">
+						<img src="images/galleroid/1/4.jpg" class="galleroid-picture" width="100" height="100">
+					-->
+				</div>
+				<button class="galleroid-previous-button"><</button>
+				<p class="galleroid-title">
+					Title bigger title title test
+				</p>
+				<button class="galleroid-next-button">></button>
+				<div class="galleroid-text-container">
+					<!-- only one of these paragraphs will be shown at one time alongside its accompanying picture -->
+					<!-- pictures and text must match up in number and order -->
+					<p class="galleroid-text active">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+					</p>
+					<!--
+						<p class="galleroid-text">
+							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+						</p>
+						<p class="galleroid-text">
+							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+						</p>
+						<p class="galleroid-text">
+							Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						</p> 
+					-->
+				</div>
+			</div>
 		</div>
 	</main>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
