--- a/index.html
+++ b/index.html
@@ -52,12 +52,10 @@
 				<div class="galleroid-item">
 					<div class="galleroid-picture-container">
 						<!-- only one of these images will be shown at one time -->
-						<!--
-									<img src="images/galleroid/1/1.jpg" class="galleroid-picture active" width="100" height="100">
-									<img src="images/galleroid/1/2.jpg" class="galleroid-picture" width="100" height="100">
-									<img src="images/galleroid/1/3.jpg" class="galleroid-picture" width="100" height="100">
-									<img src="images/galleroid/1/4.jpg" class="galleroid-picture" width="100" height="100">
-								-->
+						<img src="images/galleroid/1/1.png" class="galleroid-picture active" width="100" height="100">
+						<img src="images/galleroid/1/2.png" class="galleroid-picture hidden-right" width="100" height="100">
+						<img src="images/galleroid/1/3.png" class="galleroid-picture hidden-right" width="100" height="100">
+						<img src="images/galleroid/1/4.png" class="galleroid-picture hidden-right" width="100" height="100">
 					</div>
 					<button class="galleroid-previous-button">
 						<</button>
