small change to body styling in example page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<script src="galleroid.js"></script>
 </head>
 
-<body>
+<body style="margin:0;">
 	<main>
 		<!-- include a div for the contents of galleroid.html to be inserted into ---------------->
 		<div id="galleroid">
