--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<meta name="description" content="" />
 
 	<!-- add the following three lines to your HTML file ---------------------------------------->
-	<link rel="stylesheet" href="galleroid.css" />
+	<link rel="stylesheet" href="galleroid/galleroid.css" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="galleroid.js"></script>
+	<script src="galleroid/galleroid-navigation.js"></script>
 </head>
 
 <body style="margin:0;">
