--- a/galleroid-example.html
+++ b/galleroid-example.html
@@ -5,28 +5,32 @@
         <div class="galleroid-picture-container">
             <!-- only one of these images will be shown at one time -->
             <!-- foreground images -->
-            <img src="images/galleroid/1/1.png" class="galleroid-picture active" width="100" height="100">
-            <img src="images/galleroid/1/2.png" class="galleroid-picture hidden-right" width="100" height="100">
-            <img src="images/galleroid/1/3.png" class="galleroid-picture hidden-right" width="100" height="100">
-            <img src="images/galleroid/1/4.png" class="galleroid-picture hidden-right" width="100" height="100">
+            <img src="images/galleroid/1/1.png" class="galleroid-fg-picture active" width="100" height="100">
+            <img src="images/galleroid/1/2.png" class="galleroid-fg-picture hidden-right" width="100" height="100">
+            <img src="images/galleroid/1/3.png" class="galleroid-fg-picture hidden-right" width="100" height="100">
+            <img src="images/galleroid/1/4.png" class="galleroid-fg-picture hidden-right" width="100" height="100">
+            <img src="images/galleroid/1/1.png" class="galleroid-bg-picture active" width="100" height="100">
+            <img src="images/galleroid/1/2.png" class="galleroid-bg-picture hidden-right" width="100" height="100">
+            <img src="images/galleroid/1/3.png" class="galleroid-bg-picture hidden-right" width="100" height="100">
+            <img src="images/galleroid/1/4.png" class="galleroid-bg-picture hidden-right" width="100" height="100">
         </div>
         <button class="galleroid-previous-button">&lt</button>
         <p class="galleroid-title">
             Lorem ipsum dolor sit amet
         </p>
         <button class="galleroid-next-button">&gt</button>
-        <div class="galleroid-text-container">
+        <div class="galleroid-caption-container">
             <!-- only one of these paragraphs will be shown at one time alongside its accompanying picture -->
-            <p class="galleroid-text active">
+            <p class="galleroid-caption active">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
-            <p class="galleroid-text hidden-right">
+            <p class="galleroid-caption hidden-right">
                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
             </p>
-            <p class="galleroid-text hidden-right">
+            <p class="galleroid-caption hidden-right">
                 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
             </p>
-            <p class="galleroid-text hidden-right">
+            <p class="galleroid-caption hidden-right">
                 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
         </div>
