--- a/galleroid-example.html
+++ b/galleroid-example.html
@@ -14,11 +14,11 @@
             <img src="images/galleroid/1/3.png" class="galleroid-bg-picture hidden-right" width="100" height="100">
             <img src="images/galleroid/1/4.png" class="galleroid-bg-picture hidden-right" width="100" height="100">
         </div>
-        <button class="galleroid-previous-button">&lt</button>
+        <button class="galleroid-previous-button">&larr;</button>
         <p class="galleroid-title">
             Lorem ipsum dolor sit amet
         </p>
-        <button class="galleroid-next-button">&gt</button>
+        <button class="galleroid-next-button">&rarr;</button>
         <div class="galleroid-caption-container">
             <!-- only one of these paragraphs will be shown at one time alongside its accompanying picture -->
             <p class="galleroid-caption active">
