--- a/galleroid-example.html
+++ b/galleroid-example.html
@@ -6,13 +6,13 @@
             <!-- only one of these images will be shown at one time -->
             <!-- foreground images -->
             <img src="images/galleroid/1/1.png" class="galleroid-fg-picture active" width="100" height="100">
-            <img src="images/galleroid/1/2.png" class="galleroid-fg-picture hidden-right" width="100" height="100">
-            <img src="images/galleroid/1/3.png" class="galleroid-fg-picture hidden-right" width="100" height="100">
-            <img src="images/galleroid/1/4.png" class="galleroid-fg-picture hidden-right" width="100" height="100">
+            <img src="" data-src="images/galleroid/1/2.png" class="galleroid-fg-picture hidden-right" width="100" height="100">
+            <img src="" data-src="images/galleroid/1/3.png" class="galleroid-fg-picture hidden-right" width="100" height="100">
+            <img src="" data-src="images/galleroid/1/4.png" class="galleroid-fg-picture hidden-right" width="100" height="100">
             <img src="images/galleroid/1/1.png" class="galleroid-bg-picture active" width="100" height="100">
-            <img src="images/galleroid/1/2.png" class="galleroid-bg-picture hidden-right" width="100" height="100">
-            <img src="images/galleroid/1/3.png" class="galleroid-bg-picture hidden-right" width="100" height="100">
-            <img src="images/galleroid/1/4.png" class="galleroid-bg-picture hidden-right" width="100" height="100">
+            <img src="" data-src="images/galleroid/1/2.png" class="galleroid-bg-picture hidden-right" width="100" height="100">
+            <img src="" data-src="images/galleroid/1/3.png" class="galleroid-bg-picture hidden-right" width="100" height="100">
+            <img src="" data-src="images/galleroid/1/4.png" class="galleroid-bg-picture hidden-right" width="100" height="100">
         </div>
         <button class="galleroid-previous-button">&larr;</button>
         <p class="galleroid-title">
